--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Playfair+Display:wght@600&family=Quicksand:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Quicksand:wght@300;500&display=swap');
+
 .text-wrapper {
     width: 100%;
     position: relative;
@@ -41,10 +44,11 @@
 }
 
 h1 { text-align: center;
-
+    font-family: 'Playfair Display', serif;
+    font-size: 40px;
 }
 
-.center {
+.centerabout {
     text-align: center;
     width: 50%;
 }
